--- a/src/personal/templates/personal/profile.html
+++ b/src/personal/templates/personal/profile.html
@@ -18,7 +18,7 @@
     }
     .border{
         width: 800px;
-        height: 270px;
+        height: 300px;
         padding: 30px;
     }
     table{
@@ -27,6 +27,12 @@
     td{
         padding-top: 10px;
     }
+    .btn{
+        background-color: #fd9801;
+    }
+    .btn:hover{
+        background-color: #fd9801;
+    }
 </style>
 <div class="container-fluid content">
     <div class="container">
@@ -34,13 +40,13 @@
         <div class="border">
             <h2 class="ml12">My Profile</h2>
             <div class="row">
-                <div class="col-sm-2 text-end">
+                <div class="col-sm-2 ">
                     <p>User ID: </p>
                 </div>
                 <div class="col-sm-4">
                     <p>{{ request.user.id }}</p>
                 </div>
-                <div class="col-sm-2 text-end">
+                <div class="col-sm-2 ">
                     <p>Username: </p>
                 </div>
                 <div class="col-sm-4">
@@ -48,13 +54,27 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-2 text-end">
+                <div class="col-sm-2 ">
+                    <p>Firstname: </p>
+                </div>
+                <div class="col-sm-4">
+                    <p>{{ request.user.firstname }}</p>
+                </div>
+                <div class="col-sm-2 ">
+                    <p>Lastname: </p>
+                </div>
+                <div class="col-sm-4">
+                    <p>{{ request.user.lastname }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2 ">
                     <p>Birthdate: </p>
                 </div>
                 <div class="col-sm-4">
                     <p>{{ request.user.birthdate }}</p>
                 </div>
-                <div class="col-sm-2 text-end">
+                <div class="col-sm-2 ">
                     <p>Address: </p>
                 </div>
                 <div class="col-sm-4">
@@ -62,13 +82,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-2 text-end">
+                <div class="col-sm-2 ">
                     <p>Mobile: </p>
                 </div>
                 <div class="col-sm-4">
                     <p>{{ request.user.mobileNumber }}</p>
                 </div>
-                <div class="col-sm-2 text-end">
+                <div class="col-sm-2 ">
                     <p>Email: </p>
                 </div>
                 <div class="col-sm-4">
@@ -76,8 +96,8 @@
                 </div>
             </div>
             <div class="container">
-                <a class="btn btn-secondary" href="/update_password" >Change Password</a>
-                <a href="/update" class="btn btn-secondary">Update</a>
+                <a class="btn" href="/update_password" >Change Password</a>
+                <a href="/update" class="btn">Update</a>
             </div>
         </div>  
         <br>
@@ -133,10 +153,8 @@
                 </td>
                 <td>{% if bet.team == "Team A" %}
                     <label>{{ bet.game.team_A }}</label>
-                    <img src="{{bet.game.logo_A.url}}" width="30px" height="30px" />
                     {% else %}
                     <label>{{ bet.game.team_B }}</label>
-                    <img src="{{bet.game.logo_B.url}}" width="30px" height="30px" />
                     {% endif %}
                 </td>
                 <td>{{bet.date}}</td>
