--- a/src/personal/templates/personal/withdraw.html
+++ b/src/personal/templates/personal/withdraw.html
@@ -1,22 +1,5 @@
 {% block content %}
 <style>
-    .login-form{
-        border-radius: 15px;
-        height: 220px;
-    }
-    hr{
-        height: 10px;
-        border: 0;
-        box-shadow: 0 10px 10px -10px black inset;
-        margin: 0;
-    }
-    .content a, .content input{
-        color: black;
-        display: inline;
-    }
-    .btn{
-        border-radius: 8px;
-    }
     .row{
         padding-bottom: 16px;
     }
@@ -24,28 +7,30 @@
         border-color: black;
         border-width: 2px;
         border-radius: 7px;
-        height: 30px;
-        width: 105px;
+        height: 35px;
+        width: 100%;
+    }
+    .content input{
+        width: 100%;
     }
 </style>
-
+    <form action="/withdraw">
         {% csrf_token %}
         <div>
-            <h2>Withdraw</h2>
-            <hr>
+            <h2 style="margin-left: 50%;">Withdraw</h2>
             <div class="row">
-                <div class="col-sm-3 text-end">
+                <div class="col-sm-4 text-end">
                     <label>Amount:</label>
                 </div>
-                <div class="col-sm-9 text-start">
+                <div class="col-sm-8 text-start">
                     <input type="number" id="amount" name="amount" min="100" max="5000.0" required>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3 text-end">
+                <div class="col-sm-4 text-end">
                     <label for="partner">Select Partner:</label>
                 </div>
-                <div class="col-sm-9 text-start">
+                <div class="col-sm-8 text-start">
                     <select name="partner" class="partner">
                         <option value="paypal">Paypal</option>
                         <option value="gcash" disabled>Gcash</option>
@@ -53,11 +38,15 @@
                     </select>
                 </div>
             </div>
-            <hr>
-            <input class="btn btn-secondary" type="submit" value="Withdraw"></input>
+            <div class="row">
+                <div class="col-sm-4"></div>
+                <div class="col-sm-8">
+                    <button class="btn" type="submit">Withdraw</button>
+                </div>
+            </div>
             <label class="error title">{{ err }}</label>
         </div>      
-
+    </form>
 {% if msg %}
 <script>
     alert('{{ msg }}');
