--- a/src/personal/templates/personal/admin.html
+++ b/src/personal/templates/personal/admin.html
@@ -5,6 +5,18 @@
     #search, table{
         width: 100%;
     }
+    table input{
+        width: 100%;
+    }
+    .btn{
+        background-color: #fd9801;
+    }
+    .btn:hover{
+        background-color: #fd9801;
+    }
+    td{
+        padding-top: 8px;
+    }
 </style>
 <div class="container-fluid content">
     <br>
@@ -17,7 +29,7 @@
         </div>
     </div>
     <br>
-    <table>
+    <table class="text-center">
         <tr class="table-background">
             <th>User ID</th>
             <th>Username</th>
@@ -34,7 +46,7 @@
             <td>Test</td>
             <td>Test</td>
             <td>Test</td>
-            <td><input type="button" value="Check"></td>
+            <td><input type="button" class="btn" value="Check"></td>
         </tr>
     </table>
 </div>
