--- a/src/templates/ModalPopup.html
+++ b/src/templates/ModalPopup.html
@@ -3,8 +3,6 @@
 <head>  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{% static 'css/betlock.css' %}" rel="stylesheet">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <title>BetLock</title>
 </head>
 <body>
@@ -30,9 +28,6 @@
 
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" id="modalButton" style="display: none;"></button>
 
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-
     <script>
         $(document).ready(function(){
             function showModal(title, message) {
@@ -43,5 +38,10 @@
 
         });
     </script>
+    <style>
+    .modal-backdrop {
+    z-index: -100; 
+}
+</style>
 </body>
 </html>
