Jake & Ricky & Friends

--- a/src/personal/templates/personal/lobby.html
+++ b/src/personal/templates/personal/lobby.html
@@ -14,13 +14,13 @@
     font-size: 16px;
   }
 </style>
-<div class="container-fluid white-text content">
+<div class="container-fluid content">
   <div class="container">
     <br>
     <br>
     <div class="row">
       <div class="col-sm-3"></div>
-      <div class="col-sm-6 text-center gray-background">
+      <div class="col-sm-6 text-center table-background">
         <h2>Featured Matches</h2>
       </div>
       <div class="col-sm-2 text-start" style="padding-top: 10px;">
@@ -70,7 +70,7 @@
 
     <div class="row">
       <div class="col-sm-3"></div>
-      <div class="col-sm-6 text-center gray-background">
+      <div class="col-sm-6 text-center table-background">
         <h2>Local Matches</h2>
       </div>
       <div class="col-sm-2 text-start" style="padding-top: 10px;">
@@ -190,7 +190,7 @@
 
     <div class="row">
       <div class="col-sm-3"></div>
-      <div class="col-sm-6 text-center gray-background">
+      <div class="col-sm-6 text-center table-background">
         <h2>Recent Matches</h2>
       </div>
     </div>
