--- a/src/personal/templates/personal/wallet.html
+++ b/src/personal/templates/personal/wallet.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <style>
-.content button {
+.nav-item button, .col-sm-8 .btn{
    width: 100%;
    border-radius: 8px;
    color: black;
