--- a/src/templates/ModalPopup.html
+++ b/src/templates/ModalPopup.html
@@ -4,23 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BetLock</title>
+    <style>
+        .close{
+            background-color: #fd9801;
+            border-color: black;
+            border-width: 1px;
+            border-radius: 7px;
+            padding: 0 7px 0 7px;
+        }
+        .modal-header{
+            background-color: #fd5001;
+        }
+        .modal-footer button{
+            color: black;
+            background-color: #fd9801;
+        }
+    </style>
 </head>
 <body>
-    
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                        <span aria-hidden="true">X</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <p>Modal Message Here</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Okay</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Yes</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">No</button>
                 </div>
             </div>
         </div>
