--- a/src/static/css/betlock.css
+++ b/src/static/css/betlock.css
@@ -1,3 +1,12 @@
+body::-webkit-scrollbar {
+    display: none;
+}
+
+body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
 .navbar div{
     padding: 0;
     margin: 0;
@@ -21,14 +30,13 @@
     padding-right: 24px;
 }
 .content{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     min-height: 92.46vh;
     color: white;
     background-image: url("/static/img/BG.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100vh;
-    background-attachment: fixed;
+    background-size: cover; /* Cover the entire container while maintaining aspect ratio */
+    background-attachment: fixed; 
 }
 .white-shadow{
     text-shadow: 1px 1px 2px black,
